me api improvements
